--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.example.android.popularmovie"
+        applicationId "com.example.android.popularmovie2"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -22,6 +22,9 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', keystoreProperties['TheMovieDbApiKey']
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
